Removed fontawesome from dist package, it now shall be added apart, refactored demo folders

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chaordic Bootstrap Demo</title>
-    <link rel="stylesheet" href="../styles/chaordic-bootstrap.css">
+    <link rel="stylesheet" href="../dist/styles/chaordic-bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <div class="sidebar">
@@ -87,7 +88,7 @@
             </div>
         </div>
     </div>
-    <script src="../scripts/jquery.js"></script>
-    <script src="../scripts/chaordic-bootstrap.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../dist/scripts/chaordic-bootstrap.js"></script>
 </body>
 </html>
