--- a/demo/search.html
+++ b/demo/search.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chaordic Search Dashboard</title>
-    <link rel="stylesheet" href="../styles/chaordic-bootstrap.css">
+    <link rel="stylesheet" href="../dist/styles/chaordic-bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <style>
         .fake-chart {
             background: #ccc;
@@ -499,7 +500,7 @@
             </div>
         </div>
     </div>
-    <script src="../scripts/jquery.js"></script>
-    <script src="../scripts/chaordic-bootstrap.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../dist/scripts/chaordic-bootstrap.js"></script>
 </body>
 </html>
