--- a/demo/search.html
+++ b/demo/search.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chaordic Search Dashboard</title>
-    <link rel="stylesheet" href="../dist/styles/chaordic-bootstrap.css">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../dist/styles/chaordic-bootstrap.css">
     <style>
         .fake-chart {
             background: #ccc;
@@ -45,7 +45,7 @@
                 <div class="page-header">
                     <h1>
                         Visão Geral
-                        <select class="form-control inline pull-right">
+                        <select>
                             <option>Imaginarium</option>
                             <option>Kangoolu</option>
                             <option>Livrarias Saraiva</option>
@@ -191,7 +191,7 @@
                 <div class="page-header">
                     <h1>
                         Otimizações
-                        <select class="form-control inline pull-right">
+                        <select>
                             <option>Imaginarium</option>
                             <option>Kangoolu</option>
                             <option>Livrarias Saraiva</option>
@@ -362,7 +362,7 @@
                 <div class="page-header">
                     <h1>
                         Configurações
-                        <select class="form-control inline pull-right">
+                        <select>
                             <option>Imaginarium</option>
                             <option>Kangoolu</option>
                             <option>Livrarias Saraiva</option>
