Little improvements on client selector

--- a/demo/index.html
+++ b/demo/index.html
@@ -63,11 +63,10 @@
                     <ul class="dropdown-menu">
                         <li>
                             <div class="form-group has-feedback">
-                                <input type="text" class="form-control">
+                                <input type="text" class="form-control" placeholder="Busca">
                                 <span class="fa fa-search form-control-feedback"></span>
                             </div>
                         </li>
-                        <li class="divider"></li>
                         <li class="active"><a href="#">Livrarias Saraiva</a></li>
                         <li><a href="#">Imaginarium</a></li>
                     </ul>
