Working on forms

--- a/demo/index.html
+++ b/demo/index.html
@@ -158,10 +158,28 @@
                             <div class="col-md-4 form-group has-error">
                                 <label>Default label</label>
                                 <input type="text" class="form-control" placeholder="Inline label example">
+                                <p class="help-block text-error">Error message, take action</p>
                             </div>
                             <div class="col-md-4 form-group has-warning">
                                 <label>Default label</label>
                                 <input type="text" class="form-control" placeholder="Inline label example">
+                                <p class="help-block text-warning">Warning message, are you sure?</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 form-group">
+                                <label>Default label</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">www.</span>
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-4 form-group">
+                                <label>Default label</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">R$</span>
+                                    <input type="text" class="form-control">
+                                </div>
                             </div>
                         </div>
                     </form>
