--- a/demo/index.html
+++ b/demo/index.html
@@ -183,6 +183,47 @@
                             </div>
                         </div>
                     </form>
+                    <h5>Modal</h5>
+                    <hr>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Launch demo modal</button>
+                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <h6>Some settings</h6>
+                                    <hr>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <div class="row">
+                                        <div class="col-md-6 form-group">
+                                            <label>Default label</label>
+                                            <input type="text" class="form-control" placeholder="Inline label example">
+                                        </div>
+                                    </div>
+                                    <div class="spacer"></div>
+                                    <h6>Some other settings</h6>
+                                    <hr>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <div class="row">
+                                        <div class="col-md-10 form-group">
+                                            <label>Default label</label>
+                                            <div class="input-group">
+                                                <span class="input-group-addon">www.</span>
+                                                <input type="text" class="form-control">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-success">Save</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
