--- a/demo/index.html
+++ b/demo/index.html
@@ -80,8 +80,11 @@
                                 <span class="fa fa-search form-control-feedback"></span>
                             </div>
                         </li>
-                        <li class="active"><a href="#">Livrarias Saraiva</a></li>
+                        <li><a href="#">Casas Bahia</a></li>
+                        <li><a href="#">Extra</a></li>
                         <li><a href="#">Imaginarium</a></li>
+                        <li class="active"><a href="#">Livrarias Saraiva</a></li>
+                        <li><a href="#">Pontofrio</a></li>
                     </ul>
                 </div>
                 <div class="user-area btn-group">
@@ -224,6 +227,52 @@
                             </div>
                         </div>
                     </div>
+                    <div class="spacer"></div>
+                    <h5>Alert</h5>
+                    <hr>
+                    <div class="alert alert-success" role="alert"><strong>Well done!</strong> You successfully read this important alert message.</div>
+                    <div class="alert alert-info" role="alert"><strong>Heads up!</strong> This alert needs your attention, but it's not super important.</div>
+                    <div class="alert alert-warning alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        <strong>Warning!</strong> Better check yourself, you're not looking too good.
+                    </div>
+                    <div class="alert alert-danger alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        <strong>Oh Snap!</strong> Change a few things up and try submitting again.
+                    </div>
+                    <div class="spacer"></div>
+                    <h5>Table</h5>
+                    <hr>
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Username</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Larry</td>
+                                <td>the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
