--- a/demo/index.html
+++ b/demo/index.html
@@ -273,6 +273,14 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div class="spacer"></div>
+                    <h5>Progress bar</h5>
+                    <hr>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                            <span class="sr-only">60% Complete</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
