--- a/demo/index.html
+++ b/demo/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../dist/styles/chaordic-bootstrap.css">
     <style>
-        #buttons > div {
+        .buttons > div {
             margin-bottom: 15px;
         }
 
-        #buttons .btn {
+        .buttons .btn {
             margin-right: 15px;
         }
 
@@ -104,9 +104,6 @@
             <li class="active"><a href="#" data-toggle="tab">Resumo</a></li>
             <li><a href="#" data-toggle="tab">Por categoria</a></li>
             <li><a href="#" data-toggle="tab">Por produto</a></li>
-            <div class="btn btn-default daterangepicker pull-right">
-                <i class="fa fa-calendar space-right"></i> <span id="selectedDateRange">18/03/2013 - 08/07/2015</span> <span class="fa fa-angle-down"></span>
-            </div>
         </ul>
         <div class="page-content">
             <div class="panel panel-default">
@@ -123,7 +120,7 @@
                     <div class="spacer"></div>
                     <h5>Buttons</h5>
                     <hr>
-                    <div id="buttons">
+                    <div class="buttons">
                         <div>
                             <a href="#" class="btn btn-primary">Primary</a>
                             <a href="#" class="btn btn-primary btn-sm">Small</a>
@@ -243,13 +240,13 @@
                     <div class="spacer"></div>
                     <h5>Table</h5>
                     <hr>
-                    <table class="table table-striped">
+                    <table class="table table-striped table-hover table-sortable">
                         <thead>
                             <tr>
-                                <th>#</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Username</th>
+                                <th class="sort-by sort-desc"># <i class="sort-icon"></i></th>
+                                <th class="sort-by">First Name <i class="sort-icon"></i></th>
+                                <th class="sort-by">Last Name <i class="sort-icon"></i></th>
+                                <th class="sort-by">Username <i class="sort-icon"></i></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -279,6 +276,31 @@
                     <div class="progress">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
                             <span class="sr-only">60% Complete</span>
+                        </div>
+                    </div>
+                    <div class="spacer"></div>
+                    <h5>Daterangepicker</h5>
+                    <hr>
+                    <p>For customization reasons, the Daterangepicker is opt-in, meaning you must <a href="https://github.com/dangrossman/bootstrap-daterangepicker#usage" target="_blank">initialize it yourself</a>.</p>
+                    <div class="btn btn-default daterangepicker">
+                        <i class="fa fa-calendar space-right"></i> <span id="selectedDateRange">18/03/2013 - 08/07/2015</span> <span class="fa fa-angle-down"></span>
+                    </div>
+                    <div class="spacer"></div>
+                    <h5>Tooltip and popovers</h5>
+                    <hr>
+                    <p>For performance reasons, the Tooltip and Popover data-apis are opt-in, meaning you must <a href="http://getbootstrap.com/javascript/#tooltips-usage" target="_blank">initialize them yourself</a>.</p>
+                    <div class="buttons">
+                        <div>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
+                        </div>
+                        <div>
+                            <button type="button" class="btn btn-default" data-toggle="popover" data-placement="left" title="Popover left" data-content="Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.">Popover left</button>
+                            <button type="button" class="btn btn-default" data-toggle="popover" data-placement="top" title="Popover top" data-content="Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.">Popover top</button>
+                            <button type="button" class="btn btn-default" data-toggle="popover" data-placement="bottom" title="Popover bottom" data-content="Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.">Popover bottom</button>
+                            <button type="button" class="btn btn-default" data-toggle="popover" data-placement="right" title="Popover right" data-content="Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.">Popover right</button>
                         </div>
                     </div>
                 </div>
@@ -315,6 +337,9 @@
             }, function(start, end) {
                 $('#selectedDateRange').text(start.format('DD/MM/YYYY') + ' - ' + end.format('DD/MM/YYYY'))
             });
+
+            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-toggle="popover"]').popover();
         });
     </script>
 </body>
