--- a/demo/index.html
+++ b/demo/index.html
@@ -303,6 +303,15 @@
                             <button type="button" class="btn btn-default" data-toggle="popover" data-placement="right" title="Popover right" data-content="Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.">Popover right</button>
                         </div>
                     </div>
+                    <div class="spacer"></div>
+                    <h5>Tabs</h5>
+                    <hr>
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li class="active"><a href="#" role="tab" data-toggle="tab">Home</a></li>
+                        <li><a href="#" role="tab" data-toggle="tab">Profile</a></li>
+                        <li><a href="#" role="tab" data-toggle="tab">Messages</a></li>
+                        <li><a href="#" role="tab" data-toggle="tab">Settings</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
