--- a/demo/index.html
+++ b/demo/index.html
@@ -322,6 +322,18 @@
                         <li><a href="#" role="tab" data-toggle="tab">Messages</a></li>
                         <li><a href="#" role="tab" data-toggle="tab">Settings</a></li>
                     </ul>
+                    <div class="spacer"></div>
+                    <h5>Pagination</h5>
+                    <hr>
+                    <ul class="pagination">
+                        <li><a href="#"><i class="fa fa-vw fa-angle-left"></i></a></li>
+                        <li class="active"><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                        <li><a href="#"><i class="fa fa-vw fa-angle-right"></i></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
